--- a/Cargo.toml
+++ b/Cargo.toml
@@ -68,6 +68,7 @@ bevy_trauma_shake = "0.5.0"
 bevy-inspector-egui = { version = "0.31.0", optional = true }
 egui_dock = { version = "0.16.0", optional = true }
 transform-gizmo-egui = { version = "0.5", optional = true }
+bevy_gltf_animation = "0.2.0"
 
 [target.x86_64-unknown-linux-gnu.dependencies]
 bevy = { version = "0.16.1", default-features = false, features = [
