--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,6 @@ version = "0.1.0"
 edition = "2024"
 
 [features]
-# use this to spin up brp
 dev = [
     "avian3d/debug-plugin",
     "avian3d/bevy_diagnostic",
@@ -12,6 +11,7 @@ dev = [
     "bevy/async_executor",
     "bevy/bevy_gizmos",
     "bevy/bevy_log",
+    "bevy/bevy_ui_debug",
     "bevy/bevy_dev_tools",
     "bevy/track_location",
     "dep:bevy-inspector-egui",
@@ -68,6 +68,7 @@ bevy_trauma_shake = "0.5.0"
 bevy-inspector-egui = { version = "0.31.0", optional = true }
 egui_dock = { version = "0.16.0", optional = true }
 transform-gizmo-egui = { version = "0.5", optional = true }
+bevy_gltf_animation = "0.2.0"
 
 [target.x86_64-unknown-linux-gnu.dependencies]
 bevy = { version = "0.16.1", default-features = false, features = [
