--- a/Cargo.toml
+++ b/Cargo.toml
@@ -62,13 +62,13 @@ bevy = { version = "0.16", default-features = false, features = [
     "default_font",            # we should remove this
     "std",
 ] }
-avian_pickup = { version = "0.2.0-dev" }
 bitflags = "2.9.0"
 bevy_trauma_shake = "0.5.0"
 bevy-inspector-egui = { version = "0.31.0", optional = true }
 egui_dock = { version = "0.16.0", optional = true }
 transform-gizmo-egui = { version = "0.5", optional = true }
 bevy_gltf_animation = "0.2.0"
+rand = "0.9.1"
 
 [target.x86_64-unknown-linux-gnu.dependencies]
 bevy = { version = "0.16.1", default-features = false, features = [
@@ -105,6 +105,7 @@ bevy = { version = "0.16.1", default-features = false, features = [
     "sysinfo_plugin",
     "tonemapping_luts",
     "webgl2",
+    "x11",
     "wayland",
 ] }
 
