--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,37 +42,7 @@ avian3d = { version = "0.3", default-features = false, features = [
 ] }
 bevy = { version = "0.16", default-features = false, features = [
     "animation",
-    "bevy_asset",
     "bevy_audio",
-    "bevy_animation",
-    "bevy_color",
-    "bevy_core_pipeline",
-    "bevy_gltf",
-    "bevy_winit",
-    "bevy_input_focus",
-    "bevy_picking",
-    "bevy_ui_picking_backend",
-    "bevy_pbr",
-    "bevy_render",
-    "bevy_scene",
-    "bevy_state",
-    "bevy_text",
-    "bevy_ui",
-    "bevy_window",
-    "default_font",            # we should remove this
-    "std",
-] }
-bitflags = "2.9.0"
-bevy_trauma_shake = "0.5.0"
-bevy-inspector-egui = { version = "0.31.0", optional = true }
-egui_dock = { version = "0.16.0", optional = true }
-transform-gizmo-egui = { version = "0.5", optional = true }
-bevy_gltf_animation = "0.2.0"
-rand = "0.9.1"
-
-[target.x86_64-unknown-linux-gnu.dependencies]
-bevy = { version = "0.16.1", default-features = false, features = [
-    "animation",
     "bevy_asset",
     "bevy_animation",
     "bevy_color",
@@ -86,8 +56,50 @@ bevy = { version = "0.16.1", default-features = false, features = [
     "bevy_picking",
     "bevy_render",
     "bevy_scene",
-    "bevy_sprite",
-    "bevy_sprite_picking_backend",
+    "bevy_state",
+    "bevy_text",
+    "bevy_ui",
+    "bevy_ui_picking_backend",
+    "bevy_window",
+    "bevy_winit",
+    "custom_cursor",
+    "default_font",
+    "hdr",
+    "ktx2",
+    "multi_threaded",
+    "png",
+    "std",
+    "smaa_luts",
+    "std",
+    "sysinfo_plugin",
+    "tonemapping_luts",
+    "webgl2",
+] }
+bitflags = "2.9.0"
+bevy_trauma_shake = "0.5.0"
+bevy-inspector-egui = { version = "0.31.0", optional = true }
+egui_dock = { version = "0.16.0", optional = true }
+transform-gizmo-egui = { version = "0.5", optional = true }
+bevy_gltf_animation = "0.2.0"
+rand = "0.9.1"
+
+[target.x86_64-unknown-linux-gnu.dependencies]
+bevy = { version = "0.16.1", default-features = false, features = [
+    "animation",
+    "bevy_audio",
+    "bevy_asset",
+    "bevy_animation",
+    "bevy_color",
+    "bevy_core_pipeline",
+    "bevy_gilrs",
+    "bevy_gizmos",
+    "bevy_gltf",
+    "bevy_input_focus",
+    "bevy_mesh_picking_backend",
+    "bevy_pbr",
+    "bevy_picking",
+    "bevy_render",
+    "bevy_scene",
     "bevy_state",
     "bevy_text",
     "bevy_ui",
@@ -108,6 +120,9 @@ bevy = { version = "0.16.1", default-features = false, features = [
     "x11",
     "wayland",
 ] }
+
+[target.wasm32-unknown-unknown.dependencies]
+getrandom = { version = "0.3", features = ["wasm_js"] }
 
 
 [profile.dev]
