--- a/Cargo.toml
+++ b/Cargo.toml
@@ -82,6 +82,7 @@ egui_dock = { version = "0.16.0", optional = true }
 transform-gizmo-egui = { version = "0.5", optional = true }
 bevy_gltf_animation = "0.2.0"
 rand = "0.9.1"
+bevy_hanabi = "0.16.0"
 
 [target.x86_64-unknown-linux-gnu.dependencies]
 bevy = { version = "0.16.1", default-features = false, features = [
