--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,15 +20,16 @@ dev = [
 ]
 dynamic_linking = ["bevy/dynamic_linking"]
 web = ["bevy/webgl2"]
+webgpu = ["bevy/webgpu"]
 native = [
     "avian3d/simd",
     "avian3d/parallel",
-    "bevy/ktx2",
-    "bevy/hdr",
     "bevy/smaa_luts",
     "bevy/sysinfo_plugin",
     "bevy/multi_threaded", # not useful for web
 ]
+# See https://github.com/TheBevyFlock/bevy_simple_subsecond_system for info on use
+hot = ["dep:bevy_simple_subsecond_system"]
 
 [dependencies]
 avian3d = { version = "0.3", default-features = false, features = [
@@ -71,9 +72,7 @@ bevy = { version = "0.16", default-features = false, features = [
     "std",
     "smaa_luts",
     "std",
-    "sysinfo_plugin",
     "tonemapping_luts",
-    "webgl2",
 ] }
 bitflags = "2.9.0"
 bevy_trauma_shake = "0.5.0"
@@ -83,6 +82,7 @@ transform-gizmo-egui = { version = "0.5", optional = true }
 bevy_gltf_animation = "0.2.0"
 rand = "0.9.1"
 bevy_hanabi = "0.16.0"
+bevy_simple_subsecond_system = { version = "0.1.11", optional = true }
 
 [target.x86_64-unknown-linux-gnu.dependencies]
 bevy = { version = "0.16.1", default-features = false, features = [
@@ -115,7 +115,6 @@ bevy = { version = "0.16.1", default-features = false, features = [
     "png",
     "smaa_luts",
     "std",
-    "sysinfo_plugin",
     "tonemapping_luts",
     "webgl2",
     "x11",
@@ -150,6 +149,16 @@ opt-level = "z"
 # this is what `release` should be
 [profile.release-dist]
 inherits = "release"
+
+[profile.wasm-dev]
+inherits = "dev"
+opt-level = 1
+
+[profile.server-dev]
+inherits = "dev"
+
+[profile.android-dev]
+inherits = "dev"
 # opt-level = 3
 # lto = "fat"
 # codegen-units = 1
