--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -2,6 +2,6 @@
 rustflags = ["--cfg", "getrandom_backend=\"wasm_js\""]
 
 # use when hotpatching
-# [target.x86_64-unknown-linux-gnu]
-# linker = "clang"
-# rustflags = ["-C", "link-arg=-fuse-ld=lld"]
+[target.x86_64-unknown-linux-gnu]
+linker = "clang"
+rustflags = ["-C", "link-arg=-fuse-ld=lld"]
