--- a/Cargo.toml
+++ b/Cargo.toml
@@ -81,8 +81,10 @@ egui_dock = { version = "0.16.0", optional = true }
 transform-gizmo-egui = { version = "0.5", optional = true }
 bevy_gltf_animation = "0.2.0"
 rand = "0.9.1"
-bevy_hanabi = "0.16.0"
+# Disabled because wtf web
+# bevy_hanabi = "0.16.0"
 bevy_simple_subsecond_system = { version = "0.1.11", optional = true }
+rand_chacha = "0.9.0"
 
 [target.x86_64-unknown-linux-gnu.dependencies]
 bevy = { version = "0.16.1", default-features = false, features = [
