--- a/Cargo.toml
+++ b/Cargo.toml
@@ -87,6 +87,7 @@ rand = "0.9.1"
 bevy_hanabi = { version = "0.16.0", optional = true }
 bevy_simple_subsecond_system = { version = "0.1.11", optional = true }
 rand_chacha = "0.9.0"
+bevy_easings = "0.16.0"
 
 [target.x86_64-unknown-linux-gnu.dependencies]
 bevy = { version = "0.16.1", default-features = false, features = [
