--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,10 +18,12 @@ dev = [
     "dep:egui_dock",
     "dep:transform-gizmo-egui",
 ]
+particles = ["dep:bevy_hanabi"]
 dynamic_linking = ["bevy/dynamic_linking"]
 web = ["bevy/webgl2"]
-webgpu = ["bevy/webgpu"]
+webgpu = ["bevy/webgpu", "particles"]
 native = [
+    "particles",
     "avian3d/simd",
     "avian3d/parallel",
     "bevy/smaa_luts",
@@ -82,9 +84,10 @@ transform-gizmo-egui = { version = "0.5", optional = true }
 bevy_gltf_animation = "0.2.0"
 rand = "0.9.1"
 # Disabled because wtf web
-# bevy_hanabi = "0.16.0"
+bevy_hanabi = { version = "0.16.0", optional = true }
 bevy_simple_subsecond_system = { version = "0.1.11", optional = true }
 rand_chacha = "0.9.0"
+bevy_easings = "0.16.0"
 
 [target.x86_64-unknown-linux-gnu.dependencies]
 bevy = { version = "0.16.1", default-features = false, features = [
