--- a/Cargo.toml
+++ b/Cargo.toml
@@ -85,7 +85,7 @@ transform-gizmo-egui = { version = "0.5", optional = true }
 bevy_gltf_animation = "0.2.0"
 rand = "0.9.1"
 # Disabled because wtf web
-bevy_hanabi = { version = "0.16.0", optional = true }
+bevy_hanabi = { version = "0.16.0", default-features=false, features=["3d"], optional = true }
 bevy_simple_subsecond_system = { version = "0.1.11", optional = true }
 rand_chacha = "0.9.0"
 bevy_mod_outline = "0.10.0"
