--- a/Cargo.toml
+++ b/Cargo.toml
@@ -46,6 +46,7 @@ avian3d = { version = "0.3", default-features = false, features = [
 bevy = { version = "0.16", default-features = false, features = [
     "animation",
     "bevy_audio",
+    "flac",
     "bevy_asset",
     "bevy_animation",
     "bevy_color",
@@ -84,7 +85,9 @@ transform-gizmo-egui = { version = "0.5", optional = true }
 bevy_gltf_animation = "0.2.0"
 rand = "0.9.1"
 # Disabled because wtf web
-bevy_hanabi = { version = "0.16.0", optional = true }
+bevy_hanabi = { version = "0.16.0", default-features = false, features = [
+    "3d",
+], optional = true }
 bevy_simple_subsecond_system = { version = "0.1.11", optional = true }
 rand_chacha = "0.9.0"
 bevy_mod_outline = "0.10.0"
@@ -115,6 +118,7 @@ bevy = { version = "0.16.1", default-features = false, features = [
     "bevy_winit",
     "custom_cursor",
     "default_font",
+    "flac",
     "hdr",
     "ktx2",
     "multi_threaded",
