fix: some fallible entity commands

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -145,7 +145,8 @@ unused_parens = "allow"
 
 # Also, no wasm-opt performed by trunk if not the release profile
 [profile.release]
-opt-level = "z"
+opt-level = "s"
+codegen-units = 1
 
 # this is what `release` should be
 [profile.release-dist]
@@ -155,17 +156,3 @@ lto = "fat"
 codegen-units = 1
 strip = true
 panic = "abort"
-
-[profile.wasm-dev]
-inherits = "dev"
-opt-level = 1
-
-[profile.server-dev]
-inherits = "dev"
-
-[profile.android-dev]
-inherits = "dev"
-# opt-level = 3
-# lto = "fat"
-# codegen-units = 1
-# strip = true
