--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,12 +18,10 @@ dev = [
     "dep:egui_dock",
     "dep:transform-gizmo-egui",
 ]
-particles = ["dep:bevy_hanabi"]
 dynamic_linking = ["bevy/dynamic_linking"]
 web = ["bevy/webgl2"]
-webgpu = ["bevy/webgpu", "particles"]
+webgpu = ["bevy/webgpu"]
 native = [
-    "particles",
     "avian3d/simd",
     "avian3d/parallel",
     "bevy/smaa_luts",
@@ -84,10 +82,6 @@ egui_dock = { version = "0.16.0", optional = true }
 transform-gizmo-egui = { version = "0.5", optional = true }
 bevy_gltf_animation = "0.2.0"
 rand = "0.9.1"
-# Disabled because wtf web
-bevy_hanabi = { version = "0.16.0", default-features = false, features = [
-    "3d",
-], optional = true }
 bevy_simple_subsecond_system = { version = "0.1.11", optional = true }
 rand_chacha = "0.9.0"
 bevy_mod_outline = "0.10.0"
@@ -151,7 +145,8 @@ unused_parens = "allow"
 
 # Also, no wasm-opt performed by trunk if not the release profile
 [profile.release]
-opt-level = "z"
+opt-level = "s"
+codegen-units = 1
 
 # this is what `release` should be
 [profile.release-dist]
@@ -161,17 +156,3 @@ lto = "fat"
 codegen-units = 1
 strip = true
 panic = "abort"
-
-[profile.wasm-dev]
-inherits = "dev"
-opt-level = 1
-
-[profile.server-dev]
-inherits = "dev"
-
-[profile.android-dev]
-inherits = "dev"
-# opt-level = 3
-# lto = "fat"
-# codegen-units = 1
-# strip = true
